@@ -1,15 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20061114.ebuild,v 1.1 2006/11/22 05:52:08 pebenito Exp $
-
-IUSE=""
-
-MODS="hal"
-
-inherit selinux-policy-2
-
-RDEPEND="sec-policy/selinux-dbus"
-
-DESCRIPTION="SELinux policy for desktops"
-
-KEYWORDS="alpha amd64 mips ppc sparc x86"
