@@ -1,6 +1,10 @@
 # ChangeLog for sec-policy/selinux-hal
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.5 2008/02/03 01:37:30 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.6 2008/03/16 04:06:42 pebenito Exp $
+
+  16 Mar 2008; Chris PeBenito <pebenito@gentoo.org>
+  -selinux-hal-20061114.ebuild:
+  Remove old ebuilds.
 
   03 Feb 2008; Chris PeBenito <pebenito@gentoo.org>
   selinux-hal-20070928.ebuild:
